--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="destination-container">
             <div class="destination" id="belize">
-                <h2>Eikes hometown</h2>
+                <h2>Eikes hometown im eigenen Branch</h2>
             </div>
 
             <div class="destination" id="barcelona">
